tests/baselines/reference/typeTagCircularReferenceOnConstructorFunction.errors.txt
tests/cases/conformance/jsdoc/bug27346.js(2,4): error TS8030: The type of a function declaration must match the function's signature.
tests/cases/conformance/jsdoc/bug27346.js(2,11): error TS2587: JSDoc type 'MyClass' circularly references itself.


==== tests/cases/conformance/jsdoc/bug27346.js (2 errors) ====
    /**
     * @type {MyClass}
       ~~~~~~~~~~~~~~~
!!! error TS8030: The type of a function declaration must match the function's signature.
              ~~~~~~~
!!! error TS2587: JSDoc type 'MyClass' circularly references itself.
     */
    function MyClass() { }
    MyClass.prototype = {};
    